...
                        style={styles.headerButton}
                    >
                        <Icon name="timer" size={20} color={theme.colors.chrome.header.foreground} />
                    </Pressable>
                ) : null}
                <Pressable
                    testID="main-header-start-new-session"
                    onPress={() => router.push('/new')}
                    hitSlop={15}
                    style={styles.headerButton}
                >
                    <Icon name="plus" size={29} color={theme.colors.chrome.header.foreground} />
                </Pressable>
...
