...
            {showDesktopSettings ? <DesktopSettingsSection /> : null}

            {/* Connect Terminal */}
            {!isRunningOnMac() && (Platform.OS !== 'web' || isPhoneSizedWeb) && (
                <ItemGroup>
                    <Item
                        testID="settings-connect-terminal-scan"
                        title={t('settingsAccount.linkNewDevice')}
                        icon={<Icon name="qr-code" size={29} color={theme.colors.accent.blue} />}
                        onPress={connectTerminal}
                        loading={isLoading}
                        showChevron={false}
                    />
...
